--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
 
 <!doctype html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Student Management System</title>
@@ -21,9 +22,18 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="stylesheet" href="http://unpkg.com/@progress/kendo-theme-bootstrap/dist/all.css" />
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/socketcluster-client/16.0.1/socketcluster-client.min.js"
+    integrity="sha512-lgy4aLz8DeKeA4TgH9ZLYaC6fEA++0BhNNzqIWFSk1QMzbfyID+WxwW6N3BiD04ynPU7uIWpSe8lzeQlnPhjng=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script>
+      if (global === undefined) {
+        var global = window;
+      }
+    </script>
 </head>
+
 <body>
   <app-root></app-root>
 </body>
-</html>
 
+</html>
